initial project version1

--- a/templates/ask.html
+++ b/templates/ask.html
@@ -7,6 +7,6 @@
 {% block content %}
 {{ block.super }} 
 
-{% include "form.html" %}
-  
+    {% include "form.html" %}
+    {% csrt_token %}
 {% endblock %}
